index margin changes
signature size

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <img
           src="https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/0a3d564af83455d4935f61fd/829-8293847_jake-corman-signature-jake-signaturecopy.png?version="
           alt="signature"
-          height="25px"
+          height="120px"
         />
       </div>
     </section>
@@ -317,7 +317,7 @@
       <h5 class="first-h5">location</h5>
       <div class="address">
         <p class="add one">121 Rock Sreet, 21 Avenue</p>
-        <p class="add two">New York, NY 92103-9000</p>
+        <p class="add two">New York, NY 921039000</p>
       </div>
       <!-- <hr class="second-line" size="4" width="30%" color="" /> -->
       <button class="second-line">&nbsp;</button>
